# after-school_inv

./: LICENSE
xbrl_financial_compare/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
xbrl_financial_compare/sample/20260627/: README.md  comparison_metrics.csv  report.html
xbrl_financial_compare/sample/20260627/processed/: 6526.json  6769.json  6875.json  sample-6526.json  sample-6769.json  sample-6875.json
xbrl_financial_compare/scripts/: run_sample.ps1  run_sample.sh
xbrl_financial_compare/src/xbrl_financial_compare/: __init__.py  cli.py  html_report.py  metrics.py  model.py  sample_data.py  xbrl_loader.py
xbrl_financial_compare/tests/: test_metrics.py
