[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xbrl-financial-compare"
version = "0.1.0"
description = "Compare Japanese company financial metrics from EDINET XBRL files."
requires-python = ">=3.10"
dependencies = [
  "arelle-release>=2.37.0",
  "beautifulsoup4>=4.12.0",
  "pandas>=2.2.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[project.scripts]
xbrl-financial-compare = "xbrl_financial_compare.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
